--- a/src/Security/Authentication/JwtBearer/samples/JwtBearerSample/Properties/launchSettings.json
+++ b/src/Security/Authentication/JwtBearer/samples/JwtBearerSample/Properties/launchSettings.json
@@ -1,12 +1,4 @@
 {
-  "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
-    "iisExpress": {
-      "applicationUrl": "https://localhost:44318/",
-      "sslPort": 44318
-    }
-  },
   "profiles": {
     "SocialSample": {
       "commandName": "Project",
@@ -22,6 +14,14 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
+    }
+  },
+  "iisSettings": {
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
+    "iisExpress": {
+      "applicationUrl": "http://localhost:37363/",
+      "sslPort": 44314
     }
   }
 }
